--- a/wren-ui/package.json
+++ b/wren-ui/package.json
@@ -3,7 +3,7 @@
   "version": "0.29.2",
   "private": true,
   "scripts": {
-    "dev": "TZ=UTC next dev",
+    "dev": "TZ=UTC next dev -p 3002",
     "build": "NODE_OPTIONS=--max-old-space-size=8192 next build",
     "start": "TZ=UTC next start",
     "lint": "yarn check-types && next lint",
